# fpde2

./: .gitignore  CMakeLists.txt  README
atomic/: CMakeLists.txt  heat_RUN.f90  marcher_stiff_switch_RUN.f90  radauIIA_apply_RUN.f90  radauIIA_init_free_RUN.f90  radauIIA_marcher_RUN.f90  stepper_adams_RUN.f90
config/: Doxyfile.in  FindLUA.cmake  FindLua52.cmake  FindLuaJIT.cmake  FindMKL.cmake  doxygen.cmake
config/ifort/: compiler.cfg  linker.cfg
docs/: project.dia
docs/gprof/ghost1d/: prof_new_nx1e2_n1e6.eps  prof_old_nx1e2_n1e6.eps
example/: CMakeLists.txt  derivator.f90  derivator2d.f90  event_machine.f90  events_from_lua.f90  flu_get.f90  flu_get.lua  icicles.f90  logger_.f90  lua_config.f90  lua_metamethods.f90.bkp  marcher.lua  marcher_from_lua.f90  meta.lua  test.lua
src/: CMakeLists.txt
src/boundary/: boundary.f90  boundary.f90.bkp  boundary_box.f90  boundary_box_implementation.f90  boundary_box_user.f90  boundary_factory.f90  boundary_factory.f90.bkp
src/boundary/bounadry_dirichlet/: dirichlet.f90
src/boundary/boundary_periodic/: periodic.f90.bkp
src/boundary_new/: boundary.f90  boundary_box_.f90  boundary_factory.f90  ghost_boundary_box.f90  ghost_boundary_box_implementation.f90  ghost_boundary_box_user.f90
src/boundary_new/dirichlet/: dirichlet.f90
src/boundary_new/neumann/: neumann.f90
src/constants/: constants.f90  names.f90
src/coordinates/: coordinates.f90
src/coordinates/cartesian/: cartesian.f90  cartesian1d.f90  cartesian2d.f90
src/data/: data.f90  icicles_creator.f90
src/derivator/: derivator.f90
src/event_machine/: action.f90  event.f90  event_action_common.f90  event_machine.f90
src/event_machine/actions/: hello.f90
src/event_machine/events/: events.f90  logical_and.f90  logical_base.f90  logical_not.f90  logical_operators.f90  logical_or.f90  true.f90
src/flu/: c_helper.f90  c_lua.f90  flu.f90  flu_func.f90  flu_get.f90  flu_meta.f90  flu_meta_array.f90  flu_primitives.f90
src/function/: boundary_lr.f90  function.f90  function_registry.f90  function_registry.f90.bkp
src/generic_function/: generic_function.f90  generic_functions.f90
src/generic_function/dummy/: dummy.f90
src/generic_function/fortran_func/: func.f90
src/generic_function/fromlib/: fromlib.f90
src/generic_function/generic_function_from_object_file/: from_object.f90
src/ghost/: ghost.f90  ghost.f90.bkp  ghost1d.f90  ghost1d.f90.bkp  meshes.f90.bkp
src/ghost/boundary/: boundary.f90  boundary_factory.f90  boundary_selector.f90
src/ghost/boundary/dirichlet/: dirichlet.f90
src/ghost/boundary/neumann/: neumann.f90
src/ghost/derivator/: 1d.f90  2d.f90
src/ghost/derivator/gp_method/: 1d.f90  2d.f90
src/helpers/: c_helpers.f90  helpers.f90
src/icicles/: boundary_box.f90  box_new.f90.bkp  iced_boundary.f90  icicles.f90  icicles_register.f90  icicles_wrap.f90  named_vector.f90  passive_icicles.f90  referencer.f90
src/icicles_new/: icicles.f90  icicles_header.f90  icicles_implementation.f90  icicles_user.f90  icicles_wrap.f90
src/logger/: logger.f90  logger.h
src/marcher/: ode_marcher.f90  ode_step_control.f90  ode_stepper.f90  ode_stepper_explicit.f90  ode_system.f90
src/marcher/marcher_types/: simple.f90  stiff_switch.f90
src/marcher/odeiv_test_problems/: aren.f90  e5.f90  factory.f90  generic.f90  harmonic.f90  heat.f90  hires.f90  orego.f90  rober.f90  van_der_pol.f90
src/marcher/step_control_types/: factory.f90  scaled.f90  standard.f90  standard_dydt.f90  standard_y.f90
src/marcher/stepper_types/: adams.f90  butcher_tableu.f90  dvode_f90_m.f90  factory.f90  rk_abstract.f90  rk_explicit_abstract.f90  rk_implicit_abstract.f90  rkv65.f90
src/marcher/stepper_types/rk_explicit/: rkv65.f90
src/marcher/stepper_types/rk_implicit/: kronecker_product.f90  radauIIA.f90
src/mesh/: mesh.f90
src/mesh/mesh/: sfd3pt.f90
src/mesh/mesh1d/: mesh1d.f90  mesh1d_factory.f90  sfd3pt.f90
src/mesh/mesh2d/: mesh2d.f90
src/mesh/mesh2d/meshes/: sfd5pt.f90
src/named_vector/: named_vector.f90  named_vector_f.f90  named_vector_f_implementation.f90  named_vector_implementation.f90  named_vector_initial.f90  named_vector_t.f90  named_vector_user.f90  named_vector_x.f90
src/platonic/: platonic.f90  platonic_factory.f90  platonic_new.f90
src/regions/: regions.f90
src/solver/: solver.f90  solver_factory.f90
src/solver/lua/: solver_new.f90
src/solver/solver_simple/: solver_simple.f90
test/: CMakeLists.txt  CMakeTests.cmake  CompareTest.cmake  logger.f90  logger_expected.txt
test/flu/: flu_get_RUN.f90  flu_get_atomic_scalars_RUN.f90  flu_get_scalar_RUN.f90  flu_get_scalar_character_RUN.f90  flu_get_scalar_integer_RUN.f90  flu_get_scalar_logical_RUN.f90  flu_get_scalar_real_RUN.f90
test/function/: from_lua_RUN.f90  function_registry_from_lua_RUN.f90
test/icicles/: icicles_register_add_scalar_RUN.f90  icicles_register_add_vector_RUN.f90  icicles_register_create_icicles_RUN.f90  icicles_register_create_icicles_associated_RUN.f90  icicles_register_default_pointer_alignment_RUN.f90  icicles_register_set_pointers_RUN.f90  iciles_register_add_mixed_RUN.f90  iciles_register_add_scalar_RUN.f90  iciles_register_add_vector_RUN.f90  iciles_register_create_icicles_RUN.f90
test/logger/: logger_OUT.f90  logger_OUT.txt
test/marcher/: ode_system_OUT.f90  ode_system_OUT.txt
test/marcher/odeiv/: simple_RUN.f90  solve_RUN.f90  vdp_init_call_RUN.f90
test/marcher/stepper/: explicit_RUN.f90  kronecker_prod_OUT.f90  kronecker_prod_OUT.txt  lusolve_RUN.f90  order_RUN.f90  radauIIA_apply_RUN.f90  radauIIA_init_free_RUN.f90  rk_explicit_abstract_RUN.f90  rk_implicit_abstract_RUN.f90  rkv65_init_free_RUN.f90  simple_RUN.f90
test/raki/: test_BOLEK.f90  test_BOLEK.txt
